--- a/src/public/css/screens/call.css
+++ b/src/public/css/screens/call.css
@@ -21,7 +21,6 @@
   flex-wrap: wrap;
   position: fixed;
   top: 0;
-  z-index: 99;
   background-color: var(--white-color);
   visibility: hidden;
   transform: translateY(calc(var(--font-small) * -3.5));
@@ -114,11 +113,9 @@
 
 .device-chat {
   height: 50%;
-  display: none;
   width: 100%;
-}
-
-.device-chat.visible {
+  transition: all var(--transition-duration) ease-in-out;
+  transform: translateX(-100%);
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
@@ -129,21 +126,21 @@
   padding-right: 16px;
 }
 
+.device-chat.visible {
+  transform: translateX(0);
+}
+
 /* Device */
 .video__device {
-  display: none;
+  display: flex;
   flex-direction: column;
   padding: var(--space-default);
-  border-bottom: var(--border-default);
   height: var(--device-height);
   width: 100%;
-  background-color: var(--white-color);
 }
 
 .video__device.visible {
-  display: flex;
   background-color: transparent;
-  border: none;
   padding: var(--space-default) 0;
 }
 
@@ -216,19 +213,23 @@
     height: 100%;
     width: 100%;
     position: relative;
+    transition: none;
+    transform: none;
+    flex-direction: row;
+    justify-content: initial;
+    padding: 0;
   }
   .video__device {
-    display: flex;
     position: absolute;
     top: 0;
     right: 0;
+    border-bottom: var(--border-default);
   }
   .chat {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
     padding: var(--space-default);
     padding-top: calc(var(--device-height) + var(--space-default));
+    transform: none;
+    transition: none;
   }
   .chat__text {
     height: 85%;
